--- a/css/common.css
+++ b/css/common.css
@@ -20,6 +20,10 @@
 body {
   color: var(--primary-text-color);
   background-color: var(--primry-bg-color);
+
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.03em;
 }
 
 .list {
@@ -30,6 +34,11 @@ body {
 
 .logo {
   color: var(--accent-color);
+
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
 }
 
 .logo-header {
@@ -44,6 +53,10 @@ body {
 
 .site-nav .link {
   color: var(--title-text-color);
+
+  font-weight: 500;
+  line-height: 1.4;
+  letter-spacing: 0.02em;
 }
 
 .site-nav .link:hover,
@@ -59,6 +72,12 @@ body {
 
 .contacts-nav .link {
   color: var(--primary-text-color);
+
+  font-weight: 500;
+  line-height: 1.4;
+  letter-spacing: 0.02em;
+
+  /* Можна об'єднати з .site-nav .link (54 рядок)? */
 }
 
 .contacts-nav .link:hover,
@@ -74,6 +93,9 @@ body {
 
 .contact {
   color: var(--primry-bg-color);
+
+  font-style: normal;
+  line-height: 1.71;
 }
 
 .contact .link {
