--- a/css/main.css
+++ b/css/main.css
@@ -24,25 +24,53 @@
 .hero-title {
   color: var(--primry-bg-color);
   background-color: #2f303a;
+
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 .hero-button {
   color: var(--primry-bg-color);
   background-color: var(--accent-color);
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
 }
 
 /* Section */
 
 .section-title {
   color: var(--title-text-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+
+  text-align: center;
 }
 
 /* Fuatures */
 
 .features-list .title {
   color: var(--title-text-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+
+  text-transform: uppercase;
 }
 
+.features-list .description {
+  line-height: 1.71;
+}
 /*  */
 
 /* Team */
@@ -51,6 +79,20 @@
   background-color: var(--secondary-bg-color);
 }
 
-.team-list .title {
+.team-list .username {
   color: var(--title-text-color);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+
+  text-align: center;
+}
+
+.team-list .direction {
+  font-size: 16px;
+  line-height: 1.18;
+
+  text-align: center;
+  /* Чи можна об'єднати? */
 }
